another word edited

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                             </div>
                             <h2 class= "mt-2">Shahbaz Singh</h2>
                             <p class="lead">
-                            <strong> You could reach out to us via email.
+                            <strong> You could reach out to me via email.
                             <br>
                             Email:</strong> shahbazsinghmansahia[at]gmail[dot]com                                    
                             </p>
